--- a/View-W3School/style.css
+++ b/View-W3School/style.css
@@ -206,7 +206,7 @@ nav ul li a:hover {
 /* html */
 
 .example-section {
-    background-color: rgb(137, 187, 184);
+    background-color: #54BBBF;
     padding: 30px 10px;
     display: flex;
     justify-content: center;
@@ -214,6 +214,12 @@ nav ul li a:hover {
 /* css */
 .example-css {
     background-color: rgb(192, 194, 67);
+    padding: 30px 10px;
+    display: flex;
+    justify-content: center;
+}
+.example-js {
+    background-color: rgb(31, 60, 77);
     padding: 30px 10px;
     display: flex;
     justify-content: center;
@@ -255,7 +261,6 @@ nav ul li a:hover {
     background-color: #236627;
     color: white;
     width: 40%;
-    font-size: 90%;
 }
 
 .button-container .two {
@@ -263,7 +268,6 @@ nav ul li a:hover {
     color: black;
     width: 40%;
     font-weight: bold;
-    font-size: 90%;
 }
 
 .button-container .three {
@@ -349,6 +353,9 @@ code {
     font-size: 80%;
     font-weight: bold;
 }
+.example-hh{
+    background-image: url('Vien-2.png');
+}
 
 /* REPOSITIVE */
 @media screen and (max-width: 1225px) {
@@ -385,4 +392,5 @@ code {
     .head-footer a{
         display: none;
     }
+
 }
